<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_effect"
    tools:context=".Reset_password">
    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout"
        tools:ignore="InvalidID"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:layout_below="@+id/toolbar">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/reset_password"
            android:textColor="@color/colorBeige"
            android:textSize="30sp"
            android:textStyle="bold" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/send_email"
            android:inputType="textEmailAddress"
            android:layout_margin="10dp"
            app:met_floatingLabel="normal"
            android:hint="@string/Email"/>


        <Button
            android:id="@+id/reset_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/Reset"
            android:textColor="@color/colorwhite"
            android:background="@color/coloramericanpurple"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorengviolet"
            android:gravity="center_horizontal"
            android:text="@string/Try_again"
            android:textColor="@color/colorwhite"
            android:textSize="20sp"
            android:textStyle="italic" />
    </LinearLayout>
</RelativeLayout>
