<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/gradient_effect"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="389dp"
        android:layout_height="109dp"
        android:layout_above="@+id/button_second"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="14dp"
        android:layout_toEndOf="@+id/imageButton3"
        android:layout_toRightOf="@+id/imageButton3"
        android:gravity="center"
        android:text="@string/connecting"
        android:textColor="@color/colorwhite"
        android:textSize="50sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="215dp" />

    <Button
        android:id="@+id/button_first"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_second"
        android:layout_centerVertical="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="35dp"
        android:layout_toEndOf="@+id/imageButton3"
        android:layout_toRightOf="@+id/imageButton3"
        android:background="@drawable/gradient_effect"
        android:text="@string/sign_in"
        android:textColor="@color/colorwhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first"
        app:layout_constraintVertical_bias="0.202" />

    <Button
        android:id="@+id/button_second"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_toEndOf="@+id/imageButton3"
        android:layout_toRightOf="@+id/imageButton3"
        android:background="@drawable/gradient_effect"
        android:text="@string/sign_up"
        android:textColor="@color/colorwhite"
        tools:layout_editor_absoluteX="112dp"
        tools:layout_editor_absoluteY="481dp" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="85dp"
        android:layout_height="76dp"
        android:layout_above="@+id/button_second"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/Profile"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="107dp"
        tools:src="@tools:sample/avatars" />

</RelativeLayout>