<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_effect"
    tools:context=".MessageActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar_layout_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/coloramericanpurple"
            app:popupTheme="@style/MenuStyle"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:id="@+id/Username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/Username"
                android:textColor="@color/colorwhite"
                android:layout_marginStart="25dp"/>
        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bar_layout_message"
        android:layout_above="@+id/bottom"
        tools:ignore="UnknownId" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_effect"
        android:padding="5dp"
        android:id="@+id/bottom"
        android:layout_alignParentBottom="true">
        <EditText
            android:id="@+id/text_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/btn_send"
            android:layout_centerVertical="true"
            android:hint="@string/type_message"
            android:background="@android:color/transparent"
            android:autofillHints="Type message"
            android:layout_toLeftOf="@id/btn_send"
            android:inputType="textLongMessage" />
        <ImageButton
            android:id="@+id/btn_send"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:drawable/ic_menu_send"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/message"
            android:layout_alignParentRight="true" />

    </RelativeLayout>
</RelativeLayout>